--- a/package.json
+++ b/package.json
@@ -6,16 +6,17 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bootstrap": "^5.2.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-validator": "^6.4.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "nodemon": "^2.0.19",
     "method-override": "^3.0.0",
+    "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.19",
     "sequelize": "5.21.0"
   }
 }
